--- a/src/styles/StoryNavigation.module.scss
+++ b/src/styles/StoryNavigation.module.scss
@@ -25,6 +25,10 @@
 
     flex-grow: 1;
     flex-basis: 15%;
+    transition: all linear 0.2s;
+    &:hover {
+        flex-basis: 20%;
+    }
     display: flex;
     justify-content: center;
     flex-direction: column;
